Bug 242686 - The user cannot accept an invitation, because of no writable resource
Summary: The user cannot accept an invitation, because of no writable resource
Status: VERIFIED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: 4.5
Platform: Debian unstable Linux
: HI major
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-06-24 14:47 UTC by Ludwig Reiter
Modified: 2011-02-16 10:58 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-06-24 14:47:43 UTC
Version:           unspecified (using Devel) 
OS:                Linux

There was a writeable resource (IMAP +Kolab) in the calender. And it was activated.

Reproducible: Always

Steps to Reproduce:
1. A invites B to an event.
2. B clicks on "Accept"

Actual Results:  
no writeable resource error msg pops up.

Expected Results:  
Enter the event into the Kolab calendar resource.
Comment 1 Bjoern Ricks 2010-07-14 11:39:59 UTC
This bug still occurs in trunk
Comment 2 András Manţia 2010-07-29 18:01:43 UTC
The problem is that if no KResource is set up, you get a 
"You have no writable calendar folders for invitations, so storing or saving a response will not be possible.
Please create at least 1 writable events calendar and re-sync." error. If you set up ANY calendar kresource, be it a simple file resource, it works.
Comment 3 Bjoern Ricks 2010-07-29 18:44:16 UTC
example for .kde/share/config/kresources/calendar/stdrc

[General]                                                                                                                                                                       
PassiveResourceKeys=                                                                                                                                                            
ResourceKeys=W5iinJyDhR                                                                                                                                                         
Standard=W5iinJyDhR                                                                                                                                                             
                                                                                                                                                                                
[Resource_W5iinJyDhR]                                                                                                                                                           
CalendarURL[$e]=file://$HOME                                                                                                                                                    
ResourceIdentifier=W5iinJyDhR                                                                                                                                                   
ResourceIsActive=true                                                                                                                                                           
ResourceIsReadOnly=false                                                                                                                                                        
ResourceName=localdir-resource                                                                                                                                                  
ResourceType=localdir
Comment 4 András Manţia 2010-07-30 13:21:18 UTC
SVN commit 1157161 by amantia:

Accept bottom-up listing order from the IMAP server (if we receive a folder that was created as a dummy parent, make it non-dummy, including being selectable, listable).

CCBUG: 242686


 M  +20 -5     imapresource.cpp  
 U             imapresource.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1157161
Comment 5 Volker Krause 2010-08-13 09:58:16 UTC
SVN commit 1163068 by vkrause:

Disable the check if there is a KResource instance available, that wont
help if you only have Akonadi resources.

BUG: 242686


 M  +8 -4      text_calendar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1163068
Comment 6 Felix Wolfsteller 2010-10-01 13:46:13 UTC
In version 4:4.5~20101001.1181430-1maemo1.1181463, an empty folder selection dialog pops up, with the OK button greyed out.
Comment 7 Sergio Martins 2010-11-09 19:37:54 UTC
This is ok now.