Disable the check if there is a KResource instance available, that wont help if you only have Akonadi resources.

BUG: 242686

svn path=/trunk/KDE/kdepim/plugins/messageviewer/; revision=1163068